# Interface_Explorer

./: .gitignore  README.md  index.html  package-lock.json  package.json
Interface Explorer/: package.json
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  network_interfaces.json  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ErrorBoundary.jsx
src/pages/: HomePage.jsx  SettingsDNS.jsx  SettingsGateway.jsx
